<resources>

    <!--    Login Section-->
    <string name="app_name">Spendee</string>
    <string name="welcome_text">Take control of your finances with Spendee!</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_up_context">Don\'t have an account?</string>
    <string name="login_success_toast">Logged in successfully!</string>
    <string name="login_fail_toast">Invalid credentials, Please try again!</string>
    <string name="reset_password_text">Forgot password</string>
    <string name="otp_title">Verifying your email</string>
    <string name="logo">Spendee Logo</string>
    <string name="login_incomplete_toast">Email and password fields cannot be left blank.</string>
    <string name="user_not_found">User not found.</string>
    <string name="database_error">Database error: </string>

    <!--Sign up section-->
    <string name="welcome_sign_up_text">Sign Up to Master Your Finances with Spendee</string>
    <string name="confirm_password_input">Confirm Password</string>
    <string name="login_context">Already have an account?</string>
    <string name="login_text">Login</string>
    <string name="confirm_password_incorrect_toast">Your Password and Confirm Password is Incorrect!</string>
    <string name="username_input">Username</string>
    <string name="sign_up_successfully_toast">You have successfully registered!</string>
    <string name="verification_sent_success">Verification email sent</string>
    <string name="verification_sent_fail">Failed to send verification email</string>
    <string name="registration_fail">Registration failed: </string>
    <string name="email_exist">Your Email already exists</string>
    <string name="account_create_successful">Your user account has created successfully</string>
    <string name="account_create_fail">Failed to create account</string>
    <string name="password_requirement">*Password must be at least 6 characters long, include a number and a symbol.</string>
    <string name="show_password">show password</string>
    <string name="password_requirements_not_met">Your Password is not met with our system requirements!</string>

    <!-- Expense tracking section-->
    <string name="dashboard">Dashboard</string>
    <string name="logout_label">Logout</string>
    <string name="account_user">Account user: </string>
    <string name="back_button">back</string>
    <string name="username">Username</string>
    <string name="record_title">Spending &amp; Income Records</string>
    <string name="set_budget_title">Budget Setting</string>
    <string name="amount">Amount</string>
    <string name="add_transaction_button">Add Record</string>
    <string name="description_text">Description</string>
    <string name="username_not_found">Username not found</string>
    <string name="invalid_user_id">Invalid user id</string>
    <string name="transaction_success">Transaction Record added successfully!</string>
    <string name="transaction_fail">Failed to add transaction.</string>
    <string name="remaining_budget">Remaining Budget: RM0.00</string>
    <string name="monthly_budget">Monthly Budget: </string>
    <string name="monthly_expenses">Monthly Expenses: </string>
    <string name="monthly_income">Monthly Income: </string>
    <string name="monthly_summary">Monthly Summary</string>
    <string name="remain_budget_caution">*Attention: Your remaining budget is nearing its limit! !</string>
    <string name="budget_exceed_warning">*WARNING: Your Budget Have EXCEEDED !!!</string>
    <string name="expense">Expense</string>
    <string name="category">Category</string>
    <string name="money">RM0.00</string>
    <string name="date">Date</string>
    <string name="create_transaction_button">+ record</string>
    <string name="set_budget_button">Save</string>
    <string name="set_budget_text">Set your monthly budget here!</string>
    <string name="records_history">Records History</string>
    <string name="set_low_budget_alert_button">Set Low-Budget Limit Warning</string>
    <string name="view_monthly_record_button">View Monthly Records</string>
    <!--  Expense tracking validation message  -->
    <string name="select_record_type">Please select a Record Type</string>
    <string name="enter_amount">Please enter an amount</string>
    <string name="enter_valid_amount">Please enter a valid number for the amount</string>
    <string name="valid_expense_category">Please select a valid expense category</string>
    <string name="enter_description">Please enter a description</string>

    <!--    budget alert setting-->
    <string name="set_low_budget_text">Stay on Track with Spendee\'s Low Budget Warning</string>
    <string name="set_low_budget_alert_text">Set the Amount for Low Budget Alert</string>
    <string name="set_alert_button">Save Alert</string>
    <string name="budget_alert_img">Budget Alert Image</string>
    <string name="invalid_budget_alert_less_than_budget_message">Please enter a valid alert amount greater than 0 and less than the set budget.</string>
    <string name="invalid_budget_alert_input">Invalid input for budget alert amount"</string>
    <string name="invalid_budget_amount_input">Please enter a valid budget alert amount</string>
    <string name="alert_budget_set_successful">Budget alert set successfully</string>
    <string name="alert_budget_set_failed">Failed to set budget alert</string>

<!--    view monthly records-->
    <string name="view_monthly_records_title">View Monthly Records History</string>
    <string name="view_records_img">View records image</string>
    <string name="select_month">Select by Month</string>
    <string name="select_year">Select by Year</string>
    <string name="total_spent_amount">Total Spent Amount: RM0.00</string>
    <string name="apply_filter">Apply Filter</string>
</resources>